--- a/src/styles/Library.css
+++ b/src/styles/Library.css
@@ -91,6 +91,7 @@
   color: var(--text-color);
   display: -webkit-box;
   -webkit-line-clamp: 2;
+  line-clamp: 2;
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -102,6 +103,7 @@
   margin: 0 0 8px 0;
   display: -webkit-box;
   -webkit-line-clamp: 1;
+  line-clamp: 1;
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
